--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -8,13 +8,13 @@ WORKDIR /etc/folio/stripes
 
 COPY . /etc/folio/stripes/
 
-RUN apk add --no-cache alpine-sdk python
-RUN yarn config set python /usr/bin/python
+#RUN apk add --no-cache alpine-sdk python3
+#RUN yarn config set python /usr/bin/python
 
-RUN yarn config set @folio:registry https://repository.folio.org/repository/npm-folio/
-RUN yarn install
-RUN yarn build-module-descriptors
-RUN yarn build output --okapi $OKAPI_URL --tenant $TENANT_ID
+#RUN yarn config set @folio:registry https://repository.folio.org/repository/npm-folio/
+#RUN yarn install
+#RUN yarn build-module-descriptors
+#RUN yarn build output --okapi $OKAPI_URL --tenant $TENANT_ID
 
 # nginx stage
 FROM nginx:stable-alpine
