--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -15,10 +15,10 @@ permissions:
 jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
-
-- name: Log in to the Container registry
-  uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
-  with:
-    registry: ${{ env.REGISTRY }}
-    username: ${{ github.actor }}
-    password: ${{ secrets.GITHUB_TOKEN }}
+    steps:
+    - name: Log in to the Container registry
+      uses: docker/login-action@f054a8b539a109f9f41c372932f1ae047eff08c9
+      with:
+        registry: ${{ env.REGISTRY }}
+        username: ${{ github.actor }}
+        password: ${{ secrets.GITHUB_TOKEN }}
