--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -1,25 +1,41 @@
 name: PushImage
 
-env:
-  REGISTRY: ghcr.io
-  IMAGE_NAME: ${{ github.repository }}
-
 on:
-  pull_request:
+  push:
     branches: [ master ]
 
-permissions: 
+permissions:
   contents: read
-  packages: write 
+  packages: write
 
 jobs:
   build-and-push-image:
-    if: github.event.pull_request.merged == true
     runs-on: ubuntu-latest
     steps:
+
+    - name: Set up Docker Buildx
+      id: buildx
+      uses: docker/setup-buildx-action@v1
+
+    - name: Login to DockerHub
+      uses: docker/login-action@v1
+      with:
+        username: ${{ secrets.DOCKERHUB_USERNAME }}
+        password: ${{ secrets.DOCKERHUB_TOKEN }}
+
     - name: Log in to the Container registry
       uses: docker/login-action@v1
       with:
-        registry: ${{ env.REGISTRY }}
-        username: ${{ github.actor }}
+        registry: ghcr.io
+        username: ${{ github.repository_owner }}
         password: ${{ secrets.GITHUB_TOKEN }}
+
+    - name: Build image and push to Docker Hub and GitHub Container Registry
+      uses: docker/build-push-action@v2
+      with:
+        push: true
+        tags: ghcr.io/sul-dlss/folio-platform-complete:latest
+        file: ./docker/Dockerfile
+
+    - name: Image digest
+      run: echo ${{ steps.docker_build.outputs.digest }}
