--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,5 +1,4 @@
-FROM node:alpine as stripes_build
-#FROM node:15-alpine as stripes_build
+FROM node:15-alpine as stripes_build
 
 ARG OKAPI_URL=http://okapi-folio.dev.sul.stanford.edu
 ARG TENANT_ID=sul
