--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -3,19 +3,18 @@
 #ARG OKAPI_URL=http://okapi-folio.dev.sul.stanford.edu
 #ARG TENANT_ID=sul
 
-#RUN mkdir -p /etc/folio/stripes
-#WORKDIR /etc/folio/stripes
+RUN mkdir -p /etc/folio/stripes
+WORKDIR /etc/folio/stripes
 
-#COPY . /etc/folio/stripes/
+COPY . /etc/folio/stripes/
 
-#RUN apk add --no-cache alpine-sdk python2
-#RUN apk add --no-cache alpine-sdk yarn
-#RUN yarn config set python /usr/bin/python2
+RUN apk add --no-cache alpine-sdk python2
+RUN yarn config set python /usr/bin/python2
 
-#RUN yarn config set @folio:registry https://repository.folio.org/repository/npm-folio/
-#RUN yarn install
-#RUN yarn build-module-descriptors
-#RUN yarn build output --okapi $OKAPI_URL --tenant $TENANT_ID
+RUN yarn config set @folio:registry https://repository.folio.org/repository/npm-folio/
+RUN yarn install
+RUN yarn build-module-descriptors
+RUN yarn build output --okapi $OKAPI_URL --tenant $TENANT_ID
 
 # nginx stage
 FROM nginx:stable-alpine
@@ -23,8 +22,11 @@ EXPOSE 80
 
 #COPY --from=stripes_build /etc/folio/stripes/output /usr/share/nginx/html
 #COPY --from=stripes_build /etc/folio/stripes/yarn.lock /usr/share/nginx/html/yarn.lock
-COPY output /usr/share/nginx/html
-COPY yarn.lock /usr/share/nginx/html/yarn.lock
+COPY /etc/folio/stripes/output /usr/share/nginx/html
+COPY /etc/folio/stripes/yarn.lock /usr/share/nginx/html/yarn.lock
+
+#COPY output /usr/share/nginx/html
+#COPY yarn.lock /usr/share/nginx/html/yarn.lock
 
 COPY docker/nginx.conf /etc/nginx/conf.d/default.conf
 COPY docker/entrypoint.sh /usr/bin/entrypoint.sh
