Test updated Dockerfile

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,6 +1,6 @@
-FROM node:alpine as stripes_build
+FROM node:15-alpine as stripes_build
 
-ARG OKAPI_URL=http://okapi-folio-test.dev.sul.stanford.edu
+ARG OKAPI_URL=http://okapi-folio.dev.sul.stanford.edu
 ARG TENANT_ID=sul
 
 RUN mkdir -p /etc/folio/stripes
@@ -8,8 +8,8 @@ WORKDIR /etc/folio/stripes
 
 COPY . /etc/folio/stripes/
 
-RUN apk add --no-cache alpine-sdk python3
-RUN yarn config set python /usr/bin/python3
+RUN apk add --no-cache alpine-sdk python2
+RUN yarn config set python /usr/bin/python2
 
 RUN yarn config set @folio:registry https://repository.folio.org/repository/npm-folio/
 RUN yarn install
@@ -17,11 +17,12 @@ RUN yarn build-module-descriptors
 RUN yarn build output --okapi $OKAPI_URL --tenant $TENANT_ID
 
 # nginx stage
-FROM nginx:stable-alpine
+FROM nginx:alpine
 EXPOSE 80
 
 COPY --from=stripes_build /etc/folio/stripes/output /usr/share/nginx/html
 COPY --from=stripes_build /etc/folio/stripes/yarn.lock /usr/share/nginx/html/yarn.lock
+
 COPY docker/nginx.conf /etc/nginx/conf.d/default.conf
 COPY docker/entrypoint.sh /usr/bin/entrypoint.sh
 
