--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -1,20 +1,20 @@
-FROM node:alpine as stripes_build
+FROM node:15-alpine as stripes_build
 
-ARG OKAPI_URL=http://localhost:9130
-ARG TENANT_ID=diku
+ARG OKAPI_URL=http://okapi-folio.dev.sul.stanford.edu
+ARG TENANT_ID=sul
 
 RUN mkdir -p /etc/folio/stripes
 WORKDIR /etc/folio/stripes
 
 COPY . /etc/folio/stripes/
 
-#RUN apk add --no-cache alpine-sdk python3
-#RUN yarn config set python /usr/bin/python
+RUN apk add --no-cache alpine-sdk python2
+RUN yarn config set python /usr/bin/python2
 
-#RUN yarn config set @folio:registry https://repository.folio.org/repository/npm-folio/
-#RUN yarn install
-#RUN yarn build-module-descriptors
-#RUN yarn build output --okapi $OKAPI_URL --tenant $TENANT_ID
+RUN yarn config set @folio:registry https://repository.folio.org/repository/npm-folio/
+RUN yarn install
+RUN yarn build-module-descriptors
+RUN yarn build output --okapi $OKAPI_URL --tenant $TENANT_ID
 
 # nginx stage
 FROM nginx:stable-alpine
