Use current branch name as image tag

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -2,7 +2,7 @@ name: PushImage
 
 on:
   push:
-    branches: ${{ GITHUB_REF#refs/heads/ }}
+    branches: [ ${{ github.ref }} ]
 
 permissions:
   contents: read
