--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -32,7 +32,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: ghcr.io/sul-dlss/folio-platform-complete:${{ GITHUB_REF#refs/heads/ }}
+        tags: ghcr.io/sul-dlss/folio-platform-complete:${GITHUB_REF##*/}
         file: ./docker/Dockerfile
 
     - name: Image digest
