--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -37,7 +37,7 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: ghcr.io/sul-dlss/folio-platform-complete:${{ steps.extract_branch.outputs.branch }}
+        tags: ghcr.io/sul-dlss/folio-platform-complete:${ steps.extract_branch.outputs.branch }
         file: ./docker/Dockerfile
 
     - name: Image digest
