Use current branch name as image tag

--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -10,6 +10,10 @@ jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
     steps:
+    - name: Extract branch name
+      shell: bash
+      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
+      id: extract_branch
 
     - name: Set up Docker Buildx
       id: buildx
@@ -28,17 +32,9 @@ jobs:
         username: ${{ github.repository_owner }}
         password: ${{ secrets.GITHUB_TOKEN }}
 
-    - name: Extract branch name
-      shell: bash
-      run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-      id: current_branch
-
     - name: Build image and push to Docker Hub and GitHub Container Registry
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: ghcr.io/sul-dlss/folio-platform-complete:${ steps.extract_branch.outputs.branch }
+        tags: ghcr.io/sul-dlss/folio-platform-complete:test
         file: ./docker/Dockerfile
-
-    - name: Image digest
-      run: echo ${{ steps.docker_build.outputs.digest }}
