--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -36,5 +36,5 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: ghcr.io/sul-dlss/folio-platform-complete:${{ github.ref }}
+        tags: ghcr.io/sul-dlss/folio-platform-complete:${{ github.ref_head }}
         file: ./docker/Dockerfile
