--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -10,20 +10,14 @@ jobs:
   build-and-push-image:
     runs-on: ubuntu-latest
     steps:
-    # - name: Extract branch name
-    #   shell: bash
-    #   run: echo "##[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
-    #   id: extract_branch
+
+    - name: Extract branch name
+      id: extract_branch
+      run: echo "::[set-output name=branch;]$(echo ${GITHUB_REF#refs/heads/})"
 
     - name: Set up Docker Buildx
       id: buildx
       uses: docker/setup-buildx-action@v1
-
-    - name: Login to DockerHub
-      uses: docker/login-action@v1
-      with:
-        username: ${{ secrets.DOCKERHUB_USERNAME }}
-        password: ${{ secrets.DOCKERHUB_TOKEN }}
 
     - name: Log in to the Container registry
       uses: docker/login-action@v1
@@ -36,5 +30,5 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: ghcr.io/sul-dlss/folio-platform-complete:${{ github.ref_head }}
+        tags: ghcr.io/sul-dlss/folio-platform-complete:${{ steps.extract_branch.outputs.branch }}
         file: ./docker/Dockerfile
