--- a/.github/workflows/push.yml
+++ b/.github/workflows/push.yml
@@ -11,9 +11,9 @@ jobs:
     runs-on: ubuntu-latest
     steps:
 
-    - name: Extract branch name
-      id: extract_branch
-      run: echo "::set-output name=branch::$(echo ${GITHUB_REF#refs/heads/})"
+    # - name: Extract branch name
+    #   id: extract_branch
+    #   run: echo "::set-output name=branch::$(echo ${GITHUB_REF#refs/heads/})"
 
     - name: Set up Docker Buildx
       id: buildx
@@ -30,5 +30,6 @@ jobs:
       uses: docker/build-push-action@v2
       with:
         push: true
-        tags: ghcr.io/sul-dlss/folio-platform-complete:${{ steps.extract_branch.outputs.branch }}
+        # tags: ghcr.io/sul-dlss/folio-platform-complete:${{ steps.extract_branch.outputs.branch }}
+        tags: ghcr.io/sul-dlss/folio-platform-complete:${{ github.head_ref }}
         file: ./docker/Dockerfile
