--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -17,7 +17,7 @@ RUN yarn config set python /usr/bin/python3
 RUN yarn config set @folio:registry https://repository.folio.org/repository/npm-folio/
 RUN yarn install
 
-COPY ./tenant-assets/custom-css/Pane.css node_modules/@folio/stripes-components/lib/Pane
+COPY ./tenant-assets/MainNav.css node_modules/@folio/stripes-core/src/components/MainNav
 
 RUN yarn build-module-descriptors
 
