--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -18,7 +18,7 @@ RUN yarn config set @folio:registry https://repository.folio.org/repository/npm-
 RUN yarn install
 RUN yarn build-module-descriptors
 
-COPY tenant-assets/MainNac.css node_modules/@folio/stripes-core/src/components/MainNav
+COPY tenant-assets/MainNav.css node_modules/@folio/stripes-core/src/components/MainNav
 
 ARG OKAPI_URL=https://okapi-test.stanford.edu
 ARG TENANT_ID=sul
