--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -19,6 +19,7 @@ RUN yarn install
 RUN yarn build-module-descriptors
 
 COPY tenant-assets/MainNav.css node_modules/@folio/stripes-core/src/components/MainNav
+COPY tenant-assets/NavButton.css node_modules/@folio/stripes-core/src/components/MainNav/NavButton
 
 ARG OKAPI_URL=https://okapi-test.stanford.edu
 ARG TENANT_ID=sul
