--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -21,7 +21,7 @@ RUN yarn build-module-descriptors
 COPY tenant-assets/MainNav.css node_modules/@folio/stripes-core/src/components/MainNav
 COPY tenant-assets/Pane.css node_modules/@folio/stripes-components/lib/Pane
 
-ARG OKAPI_URL=https://okapi-stage.stanford.edu
+ARG OKAPI_URL=https://okapi-dev.stanford.edu
 ARG TENANT_ID=sul
 
 RUN yarn build output --okapi $OKAPI_URL --tenant $TENANT_ID
