--- a/docker/nginx.conf
+++ b/docker/nginx.conf
@@ -1,7 +1,7 @@
 server {
   listen 80;
   server_name localhost;
-  error_page 403 tenant-assets/403.html
+  error_page 403 /usr/share/nginx/html/403.html
   charset utf-8;
   # Serve index.html for any request not found
   location / {
