--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -21,9 +21,6 @@ RUN yarn build-module-descriptors
 COPY tenant-assets/MainNav.css node_modules/@folio/stripes-core/src/components/MainNav
 COPY tenant-assets/Pane.css node_modules/@folio/stripes-components/lib/Pane
 
-COPY tenant-assets/403.html /usr/share/nginx/html/403.html
-COPY tenant-assets/SUSig_2color_Stree_StnfrdOnly_Left.png /usr/share/nginx/html/SULogo.png
-
 ARG OKAPI_URL=https://okapi-dev.stanford.edu
 ARG TENANT_ID=sul
 
@@ -37,6 +34,8 @@ RUN apk upgrade --no-cache
 
 EXPOSE 80
 
+COPY /etc/folio/stripes/tenant-assets/403.html /usr/share/nginx/html/403.html
+COPY /etc/folio/stripes/tenant-assets/SUSig_2color_Stree_StnfrdOnly_Left.png /usr/share/nginx/html/SULogo.png
 COPY --from=stripes_build /etc/folio/stripes/output /usr/share/nginx/html
 COPY --from=stripes_build /etc/folio/stripes/yarn.lock /usr/share/nginx/html/yarn.lock
 COPY docker/nginx.conf /etc/nginx/conf.d/default.conf
