--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "@folio/handler-stripes-registry": "1.3.0",
     "@folio/inventory": "9.2.8",
     "@folio/invoice": "3.3.1",
+    "@folio/ldp": "2.0.1",
     "@folio/licenses": "8.3.1",
     "@folio/local-kb-admin": "5.3.0",
     "@folio/marc-authorities": "2.0.1",
