Adds customizations and env specific args to Dockerfile.

--- a/docker/Dockerfile
+++ b/docker/Dockerfile
@@ -17,8 +17,12 @@ RUN yarn config set python /usr/bin/python3
 RUN yarn config set @folio:registry https://repository.folio.org/repository/npm-folio/
 RUN yarn install
 RUN yarn build-module-descriptors
-ARG OKAPI_URL=http://localhost:9130
-ARG TENANT_ID=diku
+
+COPY tenant-assets/MainNav.css node_modules/@folio/stripes-core/src/components/MainNav
+COPY tenant-assets/Pane.css node_modules/@folio/stripes-components/lib/Pane
+
+ARG OKAPI_URL=https://okapi-dev.stanford.edu
+ARG TENANT_ID=sul
 RUN yarn build output --okapi $OKAPI_URL --tenant $TENANT_ID
 
 # nginx stage
